# Email-Agent-LangChain

./: .env.example  .gitignore  EVALUATION_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  agent.py  claude.md  example_usage.py  langgraph.json  pyproject.toml  requirements.txt  setup.py
evaluations/: README.md  create_dataset.py  evaluate_agent.py  import_my_emails.py  sample_emails_for_langsmith.py
evaluations/evaluators/: __init__.py  category_accuracy.py  pattern_detection.py  response_quality.py
supabase/: schema.sql
tools/: __init__.py  mermaid_generator.py
